cmake_minimum_required(VERSION 3.12.0)

set(OA_ENABLE_EXCEPTIONS OFF CACHE BOOL "If true C++ Exceptions will be enabled when compiling.")

project(oasisEngine)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_CXX_STANDARD_REQUIRED True)

set(OA_MAIN_DIR  ${PROJECT_SOURCE_DIR})

if(CMAKE_SIZEOF_VOID_P EQUAL 8)
    set(OA_BINARY_OUTPUT_DIR   ${OA_MAIN_DIR}/bin/x64)
    set(OA_LIBRARY_OUTPUT_DIR  ${OA_MAIN_DIR}/lib/x64)
elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
    set(OA_BINARY_OUTPUT_DIR   ${OA_MAIN_DIR}/bin/x86)
    set(OA_LIBRARY_OUTPUT_DIR  ${OA_MAIN_DIR}/lib/x86)
endif()

#set(OA_BINARY_OUTPUT_DIR   ${OA_MAIN_DIR}/bin)
#set(OA_LIBRARY_OUTPUT_DIR  ${OA_MAIN_DIR}/lib)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG             ${OA_BINARY_OUTPUT_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL        ${OA_BINARY_OUTPUT_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO    ${OA_BINARY_OUTPUT_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE           ${OA_BINARY_OUTPUT_DIR})

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG             ${OA_LIBRARY_OUTPUT_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL        ${OA_LIBRARY_OUTPUT_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO    ${OA_LIBRARY_OUTPUT_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE           ${OA_LIBRARY_OUTPUT_DIR})

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG             ${OA_LIBRARY_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL        ${OA_LIBRARY_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO    ${OA_LIBRARY_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE           ${OA_LIBRARY_OUTPUT_DIR})

if(WIN32)
    add_compile_options(/W4)
endif()

if (MSVC AND NOT BOO_ENABLE_EXCEPTIONS)
    if(CMAKE_CXX_FLAGS MATCHES "/EHsc")
	    string(REPLACE "/EHsc" "/EHs-c-" CMAKE_CXX_FLAGS "$(CMAKE_CXX_FLAGS)")
	endif()
endif()

string(REPLACE "/GR" "/GR-" CMAKE_CXX_FLAGS "$(CMAKE_CXX_FLAGS)")

if (CMAKE_GENERATOR STREQUAL "Ninja")
    check_cxx_compiler_flag("-fdiagnostics-color=always" F_DIAGNOSTIC_COLOR_ALWAYS)
	if (F_DIAGNOSTIC_COLOR_ALWAYS)
	    add_compile_options(-fdiagnostics-color=always)
    endif()
endif()


add_library(oaUtilities SHARED CMakeLists.txt)

add_subdirectory(oaUtilities)

